--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </nav>
         <h1>Kimberly Juarez</h1>    
         <img src="picture.png" alt="logo"> 
-        <p>I am from Peru</p>    
+        <p>I am from Perup</p>    
         <p>I like to play voleyball and tennis</p>  
         <p>I am majoring in Software Engineering</p>          
     </body>
