--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" 
         content="width=device-width, initial-scale=1.0">
         <title>WDD130 | Home</title>
+        <link href="portal.css"rel="stylessheet">
     </head>
     <body>
         <nav>
@@ -17,8 +18,10 @@
         </nav>
         <h1>Kimberly Juarez</h1>    
         <img src="picture.png" alt="logo"> 
+        <p class="background"> I like to read.</p>
         <p>I am from Perup</p>    
         <p>I like to play voleyball and tennis</p>  
-        <p>I am majoring in Software Engineering</p>          
+        <p>I am majoring in Software Engineering</p>  
+        <p class="background"> Another paragraph.</p>        
     </body>
 </html>
